Update index.html in no 21
zoroooooooooooo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ Licence URI: http://www.os-templates.com/template-terms
 <script type="text/javascript">
 $(document).ready(function() {
 	$('#featured_slide_').s3Slider({
-		timeOut:6000 
+		timeOut:6000
+		hi this is from zoro
 	});
 });
 </script>
